--- a/info.yaml
+++ b/info.yaml
@@ -1,10 +1,10 @@
 # Tiny Tapeout project information (Wokwi project)
-project:
-  wokwi_id:     0       # Set this to the ID of your Wokwi project (the number from the project's URL)
-  title:        ""      # Project title
-  author:       ""      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+project: 
+  wokwi_id:     402424018217638913      # Set this to the ID of your Wokwi project (the number from the project's URL)
+  title:        "Test wokwi project"      # Project title
+  author:       "Jocelyn Zhu"      # Your name
+  discord:      "jxcelynzhu"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "This is a simple test project."      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
@@ -14,20 +14,20 @@ project:
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
+  ui[0]: "x"
+  ui[1]: "x"
+  ui[2]: "x"
+  ui[3]: "x"
   ui[4]: ""
   ui[5]: ""
   ui[6]: ""
   ui[7]: ""
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
+  uo[0]: "x"
+  uo[1]: "x"
+  uo[2]: "x"
+  uo[3]: "x"
   uo[4]: ""
   uo[5]: ""
   uo[6]: ""
